--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -12,6 +12,10 @@
 	display: inline;
 }
 
+#navPlaceholderDiv {
+  height: 52px !important;
+}
+
 a {
   cursor: pointer;
 }
@@ -47,10 +51,10 @@ a {
 
 #navUserDropdown {
   position: fixed;
-  top:75px;
+  top:52px;
   right: 0;
   z-index: 98;
-  background-color: #00163F;
+  background-color: #1E5598;
   color: white;
   border: 0.5px solid black;
   border-top: 0px;
@@ -58,6 +62,10 @@ a {
 
 #navUserDropdown ul li a:hover {
   /*background-color: #00163F;*/
+  color: yellow;
+}
+
+#navUserDropdown ul li a {
   color: white;
 }
 
