--- a/src/app/components/auth/signup.component.html
+++ b/src/app/components/auth/signup.component.html
@@ -6,24 +6,36 @@
   </div>
 </div>
 
-<div class="p-2 col-12 col-md-6 mt-4" style="margin: auto">
+<div class="card p-2 col-12 col-md-6 mt-4" style="margin: auto">
+  
   <form ngNativeValidate #form="ngForm" (ngSubmit)="signup(form)">
+    <h4 class="mb-3">Register</h4>
+    
     <div class="form-group">
-    	<label>Email</label><span class="required text-danger">*</span>
+    	<label>Name</label><span class="required text-danger">*</span>
+      <input class="form-control" name="name" type="text" 
+             [(ngModel)]="name" required />
+    </div>
+
+    <div class="form-group">
+      <label>Email</label><span class="required text-danger">*</span>
       <input class="form-control" name="email" type="email" 
              [(ngModel)]="email" required />
     </div>
+    
     <div class="form-group">
       <label>Password</label><span class="required text-danger">*</span>
       <input class="form-control" type="password" name="password1"
              [(ngModel)]="password1" required />
     </div>
+    
     <div class="form-group">
       <label>Confirm Password</label><span class="required text-danger">*</span>
       <input class="form-control" type="password" name="password2"
              [(ngModel)]="password2" required />
 
     </div>
+    
     <div class="text-center">
       <button class="btn btn-primary m-1" type="submit" [disabled]="password1 != password2">Sign Up</button>
     </div>
